apps/freshrss/deployment-freshrss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: freshrss
  name: freshrss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - image: freshrss/freshrss:1.30.0
          name: freshrss
          resources:
            requests:
              memory: 120Mi
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - name: freshrss
              mountPath: /var/www/FreshRSS/data
              subPath: data
            - name: freshrss
              mountPath: /var/www/FreshRSS/extensions
              subPath: extensions
      restartPolicy: Always
      volumes:
        - name: freshrss
          persistentVolumeClaim:
            claimName: freshrss
