apps/freshrss/service-freshrss.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: freshrss
  name: freshrss
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: freshrss
