apps/freshrss/ingress-freshrss.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freshrss
spec:
  ingressClassName: cilium
  rules:
  - host: rss.almothana.sa
    http:
      paths:
      - backend:
          service:
            name: freshrss
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - rss.almothana.sa
      secretName: almothana-sa-tls
