apps/freshrss/networkpolicy-freshrss.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: freshrss
spec:
  endpointSelector:
    matchLabels:
      app: freshrss
  ingress:
    # From Ingress
    - fromEntities:
        - ingress
    # From Newt namespace
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: newt
            k8s:app.kubernetes.io/component: newt
            k8s:newt.instance: main-tunnel
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP

  egress:
    # To DNS
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # To Authentik
    - toServices:
        - k8sService:
            serviceName: authentik-server
            namespace: authentik
    # To pods in the same namespace
    - toEndpoints:
        - {}
    # To the Internet (RSS feeds)
    - toEntities:
        - world
